@@ -121,6 +121,7 @@ CPTBarPlotField;
     NSDecimal barOffset;
     CGFloat barOffsetScale;
     CGFloat barCornerRadius;
+    CGFloat barBaseCornerRadius;
     NSDecimal baseValue;
     BOOL barsAreHorizontal;
     BOOL barBasesVary;
@@ -134,6 +135,7 @@ CPTBarPlotField;
 @property (nonatomic, readwrite, assign) NSDecimal barOffset;
 @property (nonatomic, readwrite, assign) CGFloat barOffsetScale;
 @property (nonatomic, readwrite, assign) CGFloat barCornerRadius;
+@property (nonatomic, readwrite, assign) CGFloat barBaseCornerRadius;
 @property (nonatomic, readwrite, copy) CPTLineStyle *lineStyle;
 @property (nonatomic, readwrite, copy) CPTFill *fill;
 @property (nonatomic, readwrite, assign) BOOL barsAreHorizontal;
